# mangos2

./: .ditz-config  .gitignore  AUTHORS  ChangeLog  INSTALL.GNU  INSTALL.Win.txt  Makefile.am  NEWS  README  TODO  config.h.in  configure.ac
bugs/: project.yaml
dep/: Makefile.am
dep/inc/: Makefile.am  getopt.h
dep/inc/openssl/: opensslconf.h
dep/lib/: Makefile.am
dep/lib/Debug/Win32/: libeay32.exp  libeay32.lib  libmySQL.lib  libmysql.exp  libsqlite.lib  libsqlite3.lib  libzlib1.exp  libzlib1.ilk  libzlib1.lib
dep/lib/Debug/x64/: libeay32.exp  libeay32.lib  libmysql.exp  libmysql.lib  libsqlite.lib  libsqlite3.lib  libzlib1.exp  libzlib1.ilk  libzlib1.lib
dep/lib/Release/Win32/: libeay32.exp  libeay32.lib  libmySQL.lib  libmysql.exp  libsqlite.lib  libsqlite3.lib  libzlib1.exp  libzlib1.lib
dep/lib/Release/x64/: libeay32.exp  libeay32.lib  libmysql.exp  libmysql.lib  libsqlite.lib  libsqlite3.lib  libzlib1.exp  libzlib1.lib
dep/src/: Makefile.am  getopt.c  getopt1.c
dep/src/lua/: Makefile.am  lapi.c  lauxlib.c  lauxlib.h  lbaselib.c  lcode.c  lcode.h  ldblib.c  ldebug.c  ldebug.h  ldo.h  ldump.c  lfunc.h  lgc.c  lgc.h  liolib.c  llex.c  llex.h  llimits.h  lmem.c  lmem.h  loadlib.c  lobject.h  lopcodes.c  lopcodes.h  lparser.c  lstate.c  lstate.h  lstring.h  lstrlib.c  ltable.c  lua.aps  lua.c  lua.h  lua.rc  luaconf.h  lvm.c  lvm.h  resource.h
dep/src/lua/lib/: Makefile.am  lauxlib.c  lauxlib.h  lbaselib.c  ldblib.c  liolib.c  loadlib.c  lualib.h
dep/src/tolua++/: INSTALL  Makefile.am  README
dep/src/tolua++/include/: tolua++.h
dep/src/tolua++/lib/: Makefile.am  tolua_event.c  tolua_is.c  tolua_map.c  tolua_push.c  tolua_to.c
doc/: .gitignore  Doxyfile.in  Makefile.am  RealmServerOpcodes.odt  YAML.txt
doc/logs/: client 3.0.2-9056-authentication.packetlog
sql/: Makefile.am  README  mysql_dump
sql/authserver/: Makefile.am  accountchars.sql  accounts.sql  realms.sql
sql/realmlist/: Makefile.am  accountchars.sql  accounts.sql  realms.sql
sql/worlddata/: Makefile.am  access_levels.sql  char_spells.sql  characters.sql  guid_pool.sql  inventory.sql  items.sql  mail.sql  protochar.sql  protoitem.sql  quest_status.sql
sql/worlddata/tasks/: README  items-remove-non-protoitems.sql
sql/worldserver/: Makefile.am  access_levels.sql  char_spells.sql  characters.sql  guid_pool.sql  inventory.sql  items.sql  mail.sql  protochar.sql  protoitem.sql  quest_status.sql
src/: Makefile.am
src/authserver/: AccountMgr.cpp  AccountMgr.h  Main.cpp  Makefile.am  Opcodes.cpp  Opcodes.h  Opcodes.inc  Protocol-3.0.rules  Protocol.rules  RealmClient.cpp  RealmClient.h  RealmListSrv.cpp  RealmListSrv.h  RealmMgr.cpp  RealmMgr.h  RealmProto.rules  SrpRealm.cpp  SrpRealm.h  authserver.conf.dist.in  authserver.rc  bigint.c  bigint.h  resource.h
src/realmlist/: AccountMgr.cpp  AccountMgr.h  Main.cpp  Makefile.am  RealmClient.cpp  RealmClient.h  RealmListSrv.cpp  RealmListSrv.h  RealmMgr.cpp  RealmMgr.h  RealmProto.cpp  RealmProto.h  RealmProto.inc  RealmProto.rules  SrpRealm.cpp  SrpRealm.h  bigint.c  bigint.h  realmlist.aps  realmlist.conf.dist.in  realmlist.rc  resource.h
src/shared/: Base.cpp  Base.h  BaseVector.cpp  BaseVector.h  BitVector.h  Client.cpp  Client.h  CommandInterpreter.cpp  CommandInterpreter.h  Common.h  Console.cpp  Console.h  Database.cpp  Database.h  DatabaseMySQL.cpp  DatabaseMySQL.h  Debug.cpp  Debug.h  EncodeSQL.cpp  Errors.h  HashVector.cpp  HashVector.h  Log.cpp  Log.h  Makefile.am  MemoryLeaks.cpp  MemoryLeaks.h  Server.cpp  Server.h  Singleton.h  Sockets.cpp  Sockets.h  StrVec.cpp  StrVec.h  StringFun.cpp  StringFun.h  SystemFun.h  ThreadFun.h  Timer.h  UTF8Fun.cpp  (+3 more)
src/shared/lua/: Makefile.am  config  lapi.c  lcode.c  ldebug.c  ldo.h  lfunc.c  lgc.c  lmem.h  lopcodes.c  lparser.h  lstate.h  ltable.h  ltests.c  ltm.h  lua.h  lundump.c  lundump.h  lvm.c  lzio.h
src/shared/lua/lib/: Makefile.am  lbaselib.c  liolib.c  lmathlib.c  lstrlib.c  ltablib.c
src/shared/posix/: ConsoleSysDep.cpp  ThreadFun.cpp  TimeFun.cpp  WaitSockets.cpp
src/shared/win/: ConsoleSysDep.cpp  ThreadFun.cpp  TimeFun.cpp  WaitSockets.cpp
src/tools/: Makefile.am  dbc_convert.py  mysql_dump  mysql_import  mysql_info
src/tools/gencode/: Makefile.am  gencode.py  gencxx.py  generator.py
src/tools/tolua/: INSTALL  (+2 more)
src/voicechat/: README
src/worldserver/: AccountData.cpp  Affect.h  AuctionHouse.h  Characters.cpp  GameClient.cpp  GameClient.h  Item.cpp  Item.h  Luawrapper.cpp  Luawrapper.h  Mail.h  Main.cpp  Makefile.am  Object.cpp  Object.h  ObjectVector.cpp  ObjectVector.h  Opcodes.cpp  Opcodes.h  Opcodes.inc  Player.cpp  Player.h  Protocol-3.0.2.rules  Protocol.rules  ProtocolVectors.cpp  ProtocolVectors.h  Quadtree.cpp  Quadtree.h  Unit.cpp  Unit.h  UpdateFields.h  WorldServer.cpp  WorldServer.h  resource.h  worldserver.aps  worldserver.conf.dist.in  worldserver.lua  worldserver.pkg  worldserver.rc  worldsrv.lua  (+1 more)
src/worldserver/todo/: Affect.cpp  AreaTrigger.h  AuctionHouse.cpp  AuraHandler.cpp  AuraHandler.h  Character.cpp  Character.h  CharacterHandler.cpp  CharacterHandler.h  ChatHandler.cpp  ChatHandler.h  Combat.cpp  Combat.h  DatabaseInterface.cpp  DatabaseInterface.h  GameObject.cpp  GameObject.h  Gossip.h  GossipHandler.cpp  GossipHandler.h  Group.cpp  Group.h  GroupHandler.cpp  GroupHandler.h  Item.cpp  Item.h  ItemHandler.cpp  ItemHandler.h  Level0.cpp  Level1.cpp  Level2.cpp  Level3.cpp  Makefile.am  MiscHandler.cpp  MiscHandler.h  MovementHandler.cpp  MovementHandler.h  MsgHandler.h  NPCHandler.cpp  NPCHandler.h  (+28 more)
win/: beforerealm.bat  beforeworld.bat  config.win.h  svn_revision.js
win/VC8/: .gitignore  liblua.vcproj  liblualib.vcproj  libmangos2.vcproj  libtoluapp.vcproj  mangos2-authserver.vcproj  mangos2-worldserver.vcproj  mangos2.sln  toluapp.vcproj
win/VC9/: .gitignore  MaNGOS2.sln  installer.vdproj  liblua.vcproj  liblualib.vcproj  libmangos2.vcproj  libtoluapp.vcproj  lua.vcproj  mangos2-authserver.vcproj  mangos2-worldserver.vcproj  mangos2.sln  realmlist.vcproj  toluapp.vcproj  worldserver.vcproj
win/installer/: Product.wxs
(+22 files in other folders)
