# Copyright (C) 2008 MaNGOS foundation <http://getmangos.com/>
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

## Process this file with automake to produce Makefile.in

## Additional files to include when running 'make dist'
#  MySQL header files for Win32 builds
EXTRA_DIST = \
	mysql/config-win.h \
	mysql/decimal.h \
	mysql/errmsg.h \
	mysql/keycache.h \
	mysql/libmysql.def \
	mysql/m_ctype.h \
	mysql/m_string.h \
	mysql/my_alloc.h \
	mysql/my_attribute.h \
	mysql/my_dbug.h \
	mysql/my_dir.h \
	mysql/my_getopt.h \
	mysql/my_global.h \
	mysql/my_list.h \
	mysql/my_net.h \
	mysql/my_no_pthread.h \
	mysql/my_pthread.h \
	mysql/my_sys.h \
	mysql/my_xml.h \
	mysql/mysql.h \
	mysql/mysql_com.h \
	mysql/mysql_embed.h \
	mysql/mysql_time.h \
	mysql/mysql_version.h \
	mysql/mysqld_ername.h \
	mysql/mysqld_error.h \
	mysql/raid.h \
	mysql/sql_common.h \
	mysql/sql_state.h \
	mysql/sslopt-case.h \
	mysql/sslopt-longopts.h \
	mysql/sslopt-vars.h \
	mysql/typelib.h

#  OpenSSL header files for Win32 builds
EXTRA_DIST += \
	openssl/aes.h \
	openssl/asn1.h \
	openssl/asn1_mac.h \
	openssl/asn1t.h \
	openssl/bio.h \
	openssl/blowfish.h \
	openssl/bn.h \
	openssl/buffer.h \
	openssl/cast.h \
	openssl/comp.h \
	openssl/conf.h \
	openssl/conf_api.h \
	openssl/crypto.h \
	openssl/des.h \
	openssl/des_old.h \
	openssl/d.h \.h \
	openssl/dsa.h \
	openssl/dso.h \
	openssl/dtls1.h \
	openssl/e_os2.h \
	openssl/ebcdic.h \
	openssl/ec.h \
	openssl/ecd.h \.h \
	openssl/ecdsa.h \
	openssl/engine.h \
	openssl/err.h \
	openssl/evp.h \
	openssl/hmac.h \
	openssl/idea.h \
	openssl/krb5_asn.h \
	openssl/kssl.h \
	openssl/lhash.h \
	openssl/md2.h \
	openssl/md4.h \
	openssl/md5.h \
	openssl/obj_mac.h \
	openssl/objects.h \
	openssl/ocsp.h \
	openssl/opensslconf.h \
	openssl/opensslv.h \
	openssl/ossl_typ.h \
	openssl/pem.h \
	openssl/pem2.h \
	openssl/pkcs12.h \
	openssl/pkcs7.h \
	openssl/pq_compat.h \
	openssl/pqueue.h \
	openssl/rand.h \
	openssl/rc2.h \
	openssl/rc4.h \
	openssl/ripemd.h \
	openssl/rsa.h \
	openssl/safestack.h \
	openssl/sha.h \
	openssl/ssl.h \
	openssl/ssl2.h \
	openssl/ssl23.h \
	openssl/ssl3.h \
	openssl/stack.h \
	openssl/store.h \
	openssl/symhacks.h \
	openssl/tls1.h \
	openssl/tmdiff.h \
	openssl/txt_db.h \
	openssl/ui.h \
	openssl/ui_compat.h \
	openssl/x509.h \
	openssl/x509_vfy.h \
	openssl/x509v3.h

#  SQLite header files for Win32 builds
EXTRA_DIST += \
	sqlite/sqlite3.h \
	sqlite/sqlite3ext.h

#  ZLib header files for Win32 builds
EXTRA_DIST += \
	zlib/zconf.h \
	zlib/zlib.h

# getopt header files for Win32 builds.
EXTRA_DIST += \
	getopt.h
