# Copyright (C) 2008 MaNGOS foundation <http://getmangos.com/>
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <http://www.gnu.org/licenses/>.

## Process this file with automake to produce Makefile.in

## Sub-directories to parse

## Additional files to include when running 'make dist'
#  OpenSSL debug libraries for Win32/Win64 builds.
EXTRA_DIST = \
	Debug/Win32/libeay32.dll \
	Debug/Win32/libeay32.lib \
	Debug/x64/libeay32.dll \
	Debug/x64/libeay32.lib

# MySQL debug libraries for Win32/Win64 builds.
EXTRA_DIST += \
	Debug/Win32/libmySQL.dll \
	Debug/Win32/libmySQL.lib \
	Debug/x64/libmySQL.dll \
	Debug/x64/libmysql.lib

# SQLite debug libraries for Win32/Win64 builds.
EXTRA_DIST += \
	Debug/Win32/libsqlite.lib \
	Debug/x64/libsqlite.lib

# ZLib debug libraries for Win32/Win64 builds.
EXTRA_DIST += \
	Debug/Win32/libzlib1.dll \
	Debug/Win32/libzlib1.ilk \
	Debug/Win32/libzlib1.pdb \
	Debug/Win32/libzlib1.exp \
	Debug/Win32/libzlib1.lib \
	Debug/x64/libzlib1.dll \
	Debug/x64/libzlib1.ilk \
	Debug/x64/libzlib1.pdb \
	Debug/x64/libzlib1.exp \
	Debug/x64/libzlib1.lib

# OpenSSL release libraries for Win32/Win64 builds.
EXTRA_DIST += \
	Release/Win32/libeay32.dll \
	Release/Win32/libeay32.lib \
	Release/x64/libeay32.dll \
	Release/x64/libeay32.lib

# MySQL release libraries for Win32/Win64 builds.
EXTRA_DIST += \
	Release/Win32/libmySQL.dll \
	Release/Win32/libmySQL.lib \
	Release/x64/libmySQL.dll \
	Release/x64/libmysql.lib

# SQLite release libraries for Win32/Win64 builds.
EXTRA_DIST += \
	Release/Win32/libsqlite.lib \
	Release/x64/libsqlite.lib

# ZLib release libraries for Win32/Win64 builds.
EXTRA_DIST += \
	Release/Win32/libzlib1.dll \
	Release/Win32/libzlib1.exp \
	Release/Win32/libzlib1.lib \
	Release/x64/libzlib1.dll \
	Release/x64/libzlib1.exp \
	Release/x64/libzlib1.lib
